# ImportantHash

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml
backend/apps/ai/: admin.py  apps.py  models.py  page_rank.py  stopwords.txt  youtube_scraping.py
backend/apps/ai/migrations/: 0001_initial.py
backend/apps/script/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/script/migrations/: 0001_initial.py
backend/apps/user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/user_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/video/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/video/migrations/: 0001_initial.py  0002_video_user_id.py
backend/config/: settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  prod.py
backend/test/: locustfile.py
config/: settings.py
